creacion de conexion a la base de datos y estructura del login

--- a/plantillaGeneral.html
+++ b/plantillaGeneral.html
@@ -8,21 +8,27 @@
     <link rel="shortcut icon" href="ArchivosETC/funda.ico" type="image/x-icon">
     <!-- Estilos / Diseño -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> <!-- Estilos / BOOTSTRAP -->
-    <link rel="stylesheet" href="ArchivosETC/styles.css"> <!-- Estilos / Iniciales / Login -->
+    <link rel="stylesheet" href="css/styles.css"> <!-- Estilos / Generales -->
+
+    <script src="https://kit.fontawesome.com/0fc218370a.js" crossorigin="anonymous"></script> <!-- FontAwesome / Icons -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert / Alerts -->
 </head>
 <body class="contenedor">
 
-    <header></header>
+    <header>
+    </header>
 
 
 
-    <footer></footer>
+    <footer>
+    </footer>
 
 
 
 
     <!-- Configuraciones / JavaScript -->
     <script src="Bootstrap/js/bootstrap.min.js"></script>
-    <script src="ArchivosETC/config.js"></script>
+    <script src="js/config.js"></script>
+    <script src="sweetalert2.all.min.js"></script> <!-- SweetAlert / Pluggin -->
 </body>
 </html>
